[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/OldWizard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 156
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.203922, 0.203922, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 312.0
margin_top = 150.0
margin_right = 712.0
margin_bottom = 450.0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 156.0

[node name="Title" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 400.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0.321569, 0.792157, 0.294118, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 400.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 127.0
margin_right = 272.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="CenterContainer3" type="CenterContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 400.0
margin_bottom = 252.0

[node name="Label2" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 127.0
margin_right = 272.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="CenterContainer4" type="CenterContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 400.0
margin_bottom = 300.0

[node name="Label3" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 107.0
margin_right = 292.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Exit Level"

[connection signal="gui_input" from="ColorRect/CenterContainer/VBoxContainer/CenterContainer2" to="." method="_on_CenterContainer2_gui_input"]
[connection signal="gui_input" from="ColorRect/CenterContainer/VBoxContainer/CenterContainer3" to="." method="_on_CenterContainer3_gui_input"]
[connection signal="gui_input" from="ColorRect/CenterContainer/VBoxContainer/CenterContainer4" to="." method="_on_CenterContainer4_gui_input"]
